demo/ingress_in_osm/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:        
      annotations:
        openservicemesh.io/sidecar-injection: enabled
      labels:
        app: nginx
    spec:
      serviceAccountName: nginx
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        readinessProbe:
          failureThreshold: 9999
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 1
---
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
    appProtocol: http
    # appProtocol: tcp
  selector:
    app: nginx
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    # set the host header to allow traffic through
    nginx.ingress.kubernetes.io/upstream-vhost: nginx.default.svc.cluster.local
  labels:
    openservicemesh.io/ignore: "true"
spec:
  ingressClassName: test
  rules:
  - host: myapi.mydomain.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /
---
apiVersion: specs.smi-spec.io/v1alpha4
kind: TCPRoute
metadata:
  name: nginx
spec:
  matches:
    ports:
    - 80
